Implement weekly sentiment notification with Kafka messaging and full coverage on tests